# FHE_simulator

./: .gitignore  CONV_Lee22-bck.ipynb  CONV_Lee22.ipynb  CONV_Lee22_run.ipynb  CONV_Lee22test.ipynb  Chi_square_fhe.ipynb  Experiments.ipynb  FHE_CNN.ipynb  Gazelle.ipynb  Gazelle_matmult.ipynb  HEAAN_binding.ipynb  README.md  ReLU.ipynb  ResNet20.py  SEAL_var.ipynb  SimpleCNN_ReLU_minimax_v2.pt  Sympy_example.ipynb  Test_all.ipynb  Untitled.ipynb  Variances.ipynb  algorithms.py  approximate.py  ast_example.py  ast_example_fhe.py  build.sh  build11.py  cipher.py  ciphertext.py  context.py  errors.py  general.ipynb  heResNet.py  heconv.py  heconv_tests.py  load_test_model.py  log_approx.ipynb  min_max.ipynb  newConv22.ipynb  pyproject.toml  sample_script.ipynb  (+5 more)
.ipynb_checkpoints/: Variances-checkpoint.ipynb  test simulator-checkpoint.ipynb
HEAAN/: Doxyfile
bind/: heaan_wrapper.cpp  heaan_wrapper_cuda.cpp  heaan_wrapper_fpga.cpp
cnn/: CIFAR10_ResNet9.ipynb
hemul/: ResNet20.py  __init__.py  algorithms.py  base_emul.py  base_heaan.py  cipher.py  ciphertext.py  comparator.py  comparator_fhe.py  container.py  context.py  dataclass.py  errors.py  heaan.py  heconv.py  loader.py  matrix.py  ofhe.py  scheme.py  stats.py  utils.py
hy/: heconv.py  heconv_tests.py  hlee_cnn.py  hlee_model.py  hlee_multiplexed_lee22e.py  hlee_notClass_multiplexed_lee22e.py  hlee_notClass_multiplexed_lee22e_par.py  hlee_params_lee22e.py  hlee_run.py  hlee_utils.py  test_buildingParConv_testOnly.ipynb  test_run_compare.ipynb
optimization/: parameter_optimization.ipynb
scripts/: HEAAN.ipynb  (+7 more)
(+107 files in other folders)
