[tool.poetry]
name = "hemul"
version = "0.1.0"
description = "FHE simulator"
authors = ["Hoseung Choi <hschoi@dinsight.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
ipython = "^8.5.0"
numpy = "^1.23.4"

[tool.poetry.build]
script = "build11.py"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "pybind11>=2.6.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
